--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <h1>Installation</h1>
 
-<p>packman can be installed via npm, so first, get [nodejs](http://nodejs.org) installed. Then type:</p>
+<p>packman can be installed via npm, so first, get <a href="http://nodejs.org">nodejs</a> installed. Then type:</p>
 
 <pre><code>npm install -g packman</code></pre>
 
