--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Packman by captainbrosset</title>
+    <title>packman - text file packaging utility</title>
     
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Packman</h1>
+        <h1>packman</h1>
         <p>text file packaging command line utility</p>
         <p class="view"><a href="https://github.com/captainbrosset/packman">View the Project on GitHub <small>captainbrosset/packman</small></a></p>
         <ul>
@@ -25,7 +25,7 @@
         </ul>
       </header>
       <section>
-        <p>packman is a command line tool that can package text files together.</p>
+        <p>packman is a command line utility used to package text files together.</p>
 
 <p>Even if packman was born of the need to group several JavaScript files together in one big, minified, versioned JavaScript file to improve websites' performance, it works with any type of text files and can package any number of files in any number of crazy ways you want.</p>
 
