--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
         <p>text file packaging command line utility</p>
         <p class="view"><a href="https://github.com/captainbrosset/packman">View the Project on GitHub <small>captainbrosset/packman</small></a></p>
         <ul>
-          <li><a href="http://search.npmjs.org/#/packman">Get from <strong>npm</strong></a></li>
+          <li><a href="http://search.npmjs.org/#/packman">Get from <strong>NPM</strong></a></li>
           <li><a href="https://github.com/captainbrosset/packman/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/captainbrosset/packman/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/captainbrosset/packman">Fork On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
