--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@ File =  {
 
 <p>A couple of other parameters are more seldomly used but could be interesting to you</p>
 <ul>
-  <li>`eraseIfExists`: by default, packman won't delete the content of your target directory, pass this to true if you want it to</li>
-  <li>`exitOnFailedVisitor`: turned off by default, turn it on if you want the packman process to exit with status code 1 when a visitor crashes</li>
-  <li>`exitOnFileNotFound`: turned off by default, turn it on if you want the packman process to exit with status code 1 as soon as it finds a non existing file in the package configuration.</li>
+  <li><code>eraseIfExists</code>: by default, packman won't delete the content of your target directory, pass this to true if you want it to</li>
+  <li><code>exitOnFailedVisitor</code>: turned off by default, turn it on if you want the packman process to exit with status code 1 when a visitor crashes</li>
+  <li><code>exitOnFileNotFound</code>: turned off by default, turn it on if you want the packman process to exit with status code 1 as soon as it finds a non existing file in the package configuration.</li>
 </ul>
 
       </section>
